Text and image - center top was not centered - fixes #21

--- a/Resources/Private/Less/Theme/theme.less
+++ b/Resources/Private/Less/Theme/theme.less
@@ -433,7 +433,9 @@ h5 {
         margin-top: @line-height-computed;
     }
 }
-
+.image-center .image > img {
+    margin: 0 auto;
+}
 .image-center-outer {
     width: 100%;
     position: relative;
